--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://fengdenny.github.io/csc642participaid/",
+  "homepage": "https://fengdenny.github.io/csc642participaid",
   "name": "csc642participaid",
   "version": "0.1.0",
   "private": true,
